<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


<EditText
    android:layout_width="match_parent"
    android:layout_height="40sp"
    android:layout_margin="20sp"
    android:hint="@string/name"
    android:textColorHint="#bfbfbf"
    android:id="@+id/nameip"
    android:inputType="text"
    android:importantForAutofill="no" />

    <TextView
        style="@style/Heading"
        android:text="@string/toppings"

        />

    <CheckBox
        style="@style/CheckBox"
        android:id="@+id/wph_cream"
        android:text="@string/whipped_cream"/>
    <CheckBox
        style="@style/CheckBox"
        android:id="@+id/haschoctop"
        android:text="@string/chocolate_toppings"/>

    <TextView
        style="@style/Heading"
        android:text="@string/quantity" />




<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:onClick="add"
            android:id="@+id/add"
            android:text="@string/addsign"
            android:textSize="20sp"/>

    <TextView


        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_0"
        android:id="@+id/quantity_text_view" />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:id="@+id/sub"
        android:onClick="sub"
        android:text="@string/minussign"
        android:textSize="20sp"/>


</LinearLayout>
<!--    <TextView-->
<!--        android:layout_marginTop="16sp"-->
<!--        android:layout_marginStart="16sp"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/order_summary" />-->
<!--    <TextView-->
<!--        android:layout_marginTop="16sp"-->
<!--        android:layout_marginStart="16sp"-->
<!--        android:textSize="16sp"-->
<!--        android:textColor="@color/black"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/_20"-->
<!--        android:id="@+id/price_text_view" />-->
    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginStart="16sp"
        android:text="@string/order"
        android:onClick="submitOrder"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:id="@+id/button" />


</LinearLayout>